[tool.poetry]
name = "grok-gemini"
version = "0.0.7"
description = "Explore Goolge Gemini generative AI services."
authors = ["AxlER8R <axl@axler8r.io>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
google-generativeai = "^0.8.1"
python-dotenv = "^1.0.1"
pillow = "^11.0.0"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^24.10.0"}
isort = "^5.13.2"
pytest = "^8.3.3"
mypy = "^1.11.2"
autoflake = "^2.3.1"
jupyterlab = "^4.2.5"
ipywidgets = "^8.1.5"
jupyterlab-vim = "^4.1.4"
jupyterlab-theme-solarized-dark = "^3.0.1"
pretty-errors = "^1.2.25"

[tool.poetry.group.release.dependencies]
git-cliff = "^2.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
